--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Phonebook
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:cf3CoFrrjQQ/wAbCRRQTgaxBVmafyPjNaiK5alZ2G6A=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.phonebook.com
 
 LOG_CHANNEL=stack
 
@@ -42,3 +42,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_SECRET=S3cRet_T0k3n!?
+API_KEY=X-Phonebook-Authorization
+
+FILESYSTEM_DRIVER=public
