Improve env.example

--- a/.env.example
+++ b/.env.example
@@ -50,4 +50,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 API_SECRET=S3cRet_T0k3n!?
 API_KEY=X-Phonebook-Authorization
 
+#php artisan storage:link should be executed
 FILESYSTEM_DRIVER=public
